--- a/src/CONSTANTS.sass
+++ b/src/CONSTANTS.sass
@@ -1,2 +1,10 @@
-$BLACK_BACKGROUND : black
+$BLACK_BACKGROUND : #121212
+$RED : #DE1616
 $WHITE_TEXT : white
+$RAINBOW_RED : #FF3636
+$RAINBOW_ORANGE : #FF6A38
+$RAINBOW_YELLOW : #FFF242
+$RAINBOW_GREEN : #B0FF42
+$RAINBOW_BLUE : #4ACCFF
+$RAINBOW_PURPLE : #584FFF
+$RAINBOW_PINK : #DE59FF
