Ability to properly resize added

--- a/src/CONSTANTS.sass
+++ b/src/CONSTANTS.sass
@@ -1,6 +1,8 @@
 $BLACK_BACKGROUND : #121212
 $RED : #DE1616
 $WHITE_TEXT : white
+$WHITE_BACKGROUND : #dddddd
+//
 $RAINBOW_RED : #FF3636
 $RAINBOW_ORANGE : #FF6A38
 $RAINBOW_YELLOW : #FFF242
@@ -8,3 +10,5 @@ $RAINBOW_GREEN : #B0FF42
 $RAINBOW_BLUE : #4ACCFF
 $RAINBOW_PURPLE : #584FFF
 $RAINBOW_PINK : #DE59FF
+//
+$BIO_HEIGHT : 700px
