--- a/src/Projects/style.sass
+++ b/src/Projects/style.sass
@@ -1,9 +1,48 @@
 @import "../CONSTANTS"
 .projects-holder
   width : 100%
+  min-width: 900px
   background: $WHITE_BACKGROUND
-  min-height: 100vh
+  height: 100vh
+  min-height: 900px
+  .circles
+    position: absolute
+    overflow: hidden
+    width: 100%
+    height: 100vh
+
+  .circle
+    position: absolute
+    top : 650px
+    left : -200px
+    transform-origin: center
+    border-bottom-left-radius: 600px
+    border-bottom-right-radius: 600px
+    width : 600px
+    height : 300px
+    background: red
+
+.circles
+  position: absolute
+  top : 700px
+  overflow: hidden
+  width : 100%
+  min-width: 900px
+  height: 100vh
+  min-height: 750px
+
+  .circle
+    position: absolute
+    top : -50px
+    left : -200px
+    transform-origin: center
+    border-bottom-left-radius: 100%
+    border-bottom-right-radius: 50%
+    background: red
 
 .project-body
-  color : $BLACK_BACKGROUND
-  max-width: 800px
+  position: absolute
+  opacity: 1
+  width: 100%
+  height: 100%
+  background : $WHITE_BACKGROUND
