--- a/src/Links/style.sass
+++ b/src/Links/style.sass
@@ -1,5 +1,5 @@
 @import "../CONSTANTS"
-
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script&display=swap')
 .links-holder-hidden
   height: 0
   font-size: 0
@@ -10,11 +10,11 @@
   list-style: none
   display: flex
   width: 100%
-  background: $BLACK_BACKGROUND
   align-items : stretch
   align-content: stretch
   justify-content: space-evenly
   transition: height .2s, font-size .2s
+  opacity: 0.9
   & .link
     flex: 1
     a
@@ -25,10 +25,15 @@
       width: 100%
       height: 100%
       transition: opacity .1s
+      background: $BLACK_BACKGROUND
       &:hover
-        opacity: 0.9
+        opacity: 1
       &:active
-        opacity: 0.8
+        opacity: 0.9
+
+      p
+        font-family: Tahoma, Helvetica, Arial, "Microsoft Yahei","微软雅黑", STXihei, "华文细黑", sans-serif
+        //font-family: 'Dancing Script', cursive !important
 
     div
       background-repeat: no-repeat
