ScrollY on load is always 0 Some cleanup Image apear bug fix

--- a/src/Projects/style.sass
+++ b/src/Projects/style.sass
@@ -8,6 +8,7 @@ $maxRadius : 720px
     opacity: 0 !important
     transition: opacity 0s !important
   .circle, .circle-is-chosen
+    display: none
     opacity: 0
     transition: opacity 0s
 
