--- a/src/Projects/style.sass
+++ b/src/Projects/style.sass
@@ -31,7 +31,7 @@ $maxRadius : 720px
   transform-origin: center
   border-width: 101px
   border-style: solid
-  border-radius: 0 0 100% 100%
+  border-radius: 100%
   background: transparent
 
   p
@@ -60,6 +60,7 @@ $maxRadius : 720px
   height: 100vh
   transition: .1s
   opacity: 1
+  z-index : 2
   background : $WHITE_BACKGROUND
   transition-property : width, height, margin, border-radius
 
