--- a/src/Projects/style.sass
+++ b/src/Projects/style.sass
@@ -11,6 +11,9 @@ $maxRadius : 720px
     display: none
     opacity: 0
     transition: opacity 0s
+  .content-holder
+    display: none !important
+
 
 #circles
   transition : opacity .3s
@@ -77,7 +80,6 @@ $maxRadius : 720px
   filter :  brightness(80%)
   z-index : 1
 
-
 .content-holder-circle
   float: left
   border-radius: 100%
@@ -139,13 +141,13 @@ $width : 100% / 7
   display: flex
   justify-content: center
   align-items: center
-
+  z-index: 2
   position : absolute
   right : 0
 
   min-width: 100px
   width: calc(100% - 700px)
-  height: 100%
+  height: 651px
 
   filter : brightness(100%)
   h1
